--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "next": "15.1.3",
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
