--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@react-icons/all-files": "^4.1.0",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
@@ -29,6 +30,7 @@
     "chart.js": "^4.4.8",
     "flatpickr": "^4.6.13",
     "next": "15.1.3",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
@@ -42,16 +44,17 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "next": "15.1.3",
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/nprogress": "^0.2.3",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/react-flatpickr": "^3.8.11",
     "@types/react-transition-group": "^4.4.12",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
     "typescript": "^5"
