--- a/package.json
+++ b/package.json
@@ -19,16 +19,26 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.1",
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "@react-icons/all-files": "^4.1.0",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
+    "@tanstack/react-query": "^5.73.3",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
     "flatpickr": "^4.6.13",
+    "flowbite": "^3.1.2",
+    "flowbite-datepicker": "^1.3.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.3",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
@@ -39,13 +49,18 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.12",
