--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.73.3",
+    "@types/d3": "^7.4.3",
+    "@types/d3-cloud": "^1.2.9",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "d3": "^7.9.0",
+    "d3-cloud": "^1.2.7",
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
@@ -44,6 +49,7 @@
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-countup": "^6.5.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
@@ -60,6 +66,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@types/flatpickr": "^3.1.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
