--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.73.3",
+    "@tanstack/react-table": "^8.21.3",
     "@types/d3": "^7.4.3",
     "@types/d3-cloud": "^1.2.9",
+    "@types/moment": "^2.13.0",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
@@ -43,13 +45,16 @@
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "15.1.3",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
+    "react-dates": "^21.8.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
@@ -67,10 +72,12 @@
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@types/flatpickr": "^3.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^19.0.12",
+    "@types/react": "^19.1.2",
+    "@types/react-dates": "^21.8.6",
     "@types/react-dom": "^19.0.4",
     "@types/react-flatpickr": "^3.8.11",
     "@types/react-transition-group": "^4.4.12",
