--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
