--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-API_URL="http://localhost:3001"
+API_URL="http://192.168.100.7:3001/api/"
 JWT_SECRET="rahasia-rsud-dr-abdul-rivai"
+NEXT_PUBLIC_API_URL=http://192.168.100.7:3001/api/
