--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-API_URL="http://192.168.1.4:3001/api/"
+reiAPI_URL="https://a3595c54ce16.ngrok-free.app/api/"
 JWT_SECRET="rahasia-rsud-dr-abdul-rivai"
-NEXT_PUBLIC_API_URL=http://192.168.1.4:3001/api/
+NEXT_PUBLIC_API_URL=http://192.168.1.5:3001/api/
+# NEXT_PUBLIC_API_URL=https://a3595c54ce16.ngrok-free.app/api/
+
