--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 reiAPI_URL="https://a3595c54ce16.ngrok-free.app/api/"
 JWT_SECRET="rahasia-rsud-dr-abdul-rivai"
-NEXT_PUBLIC_API_URL=http://192.168.1.4:3001/api/
-SERVER_IP=http://192.168.1.4:3001
+NEXT_PUBLIC_API_URL=https://ownership-regarded-blocked-hebrew.trycloudflare.com/api/
+SERVER_IP=https://ownership-regarded-blocked-hebrew.trycloudflare.com
 # NEXT_PUBLIC_API_URL=https://a3595c54ce16.ngrok-free.app/api/
 
