--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "flatpickr": "^4.6.13",
     "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
@@ -51,6 +52,7 @@
     "moment": "^2.30.1",
     "next": "15.1.3",
     "nprogress": "^0.2.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
@@ -67,6 +69,7 @@
     "react-redux": "^9.2.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
