--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 reiAPI_URL="https://a3595c54ce16.ngrok-free.app/api/"
 JWT_SECRET="rahasia-rsud-dr-abdul-rivai"
-NEXT_PUBLIC_API_URL=http://192.168.1.5:3001/api/
-SERVER_IP=http://192.168.1.5:3001
+# NEXT_PUBLIC_API_URL=https://ancient-deaf-passes-headline.trycloudflare.com/api/
+# SERVER_IP=https://ancient-deaf-passes-headline.trycloudflare.com
+
+NEXT_PUBLIC_API_URL=http://192.168.1.2:3001/api/
+SERVER_IP=http://192.168.1.2:3001
 
