--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ JWT_SECRET="rahasia-rsud-dr-abdul-rivai"
 # NEXT_PUBLIC_API_URL=https://ancient-deaf-passes-headline.trycloudflare.com/api/
 # SERVER_IP=https://ancient-deaf-passes-headline.trycloudflare.com
 
-NEXT_PUBLIC_API_URL=http://192.168.1.5:3001/api/
-SERVER_IP=http://192.168.1.5:3001
+NEXT_PUBLIC_API_URL=http://192.168.1.4:3001/api/
+NEXT_PUBLIC_IP_URL=http://192.168.1.4:3001
+
+SERVER_IP=http://192.168.1.4:3001
 
