--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
+    "react-d3-tree": "^3.6.6",
     "react-dates": "^21.8.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -66,6 +67,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.3.0",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
